--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     height: 568px;
 }
 
+@media only screen and (max-width: 600px) {
+    body {width: 375px; height: 200px;}
+  }
+
 .main {
     background-color:#ffffff;
     text-align: center;
