--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-.attribution { 
+footer { 
     font-size: 11px; 
     text-align: center; 
 }
     
-.attribution a { 
+footer a { 
     color: hsl(228, 45%, 44%); 
 }
 
@@ -17,7 +17,7 @@ body {
     body {width: 375px; height: 200px;}
   }
 
-.main {
+main {
     background-color:#ffffff;
     text-align: center;
     padding: 15px;
