--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ footer {
 }
     
 footer a { 
-    color: hsl(228, 45%, 44%); 
+    color: hsl(218, 44%, 22%); 
 }
 
 body {
-    background-color: #d5e1ef;
+    background-color: hsl(212, 45%, 89%);
     width: 1440px;
     height: 568px;
 }
@@ -18,7 +18,7 @@ body {
   }
 
 main {
-    background-color:#ffffff;
+    background-color: hsl(0, 0%, 100%);
     text-align: center;
     padding: 15px;
     width:min-content;
